# sqlpp11-adapter

./: CMakeLists.txt  MANIFEST.in  Makefile  README.md  sqlpp11_adapter.cpp  sqlpp11_adapter.h  test.cpp
.github/workflows/: ci.yml
cmake/modules/: Findcasbin.cmake  Findgoogletest.cmake  Findsqlpp11.cmake
dependencies/: CMakeLists.txt
include/: CasbinRule.h  sql_casbin.h  sqlpp11_adapter.h
src/: CMakeLists.txt  main.cpp  sqlpp11_adapter.cpp  test.cpp
